--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "browser": {
+    "crypto": false,
+    "stream": false,
+    "https": false,
+    "tls": false,
+    "net": false
+  },
   "dependencies": {
     "@angular/animations": "~8.2.14",
     "@angular/cdk": "^8.2.3",
@@ -27,6 +34,7 @@
     "@auth0/angular-jwt": "^4.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "web-push": "^3.4.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -34,9 +42,10 @@
     "@angular/cli": "~8.0.1",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "@types/webpack-env": "^1.15.2",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
