send notification - require not working

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,10 @@
     "outDir": "./out-tsc/app",
     "types": [
       "node",
-      "webpack-env"
+      "webpack-env",
+    ],
+    "typeRoots": [
+      "node_modules/@types"
     ]
   },
   "include": [
