--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
     "@angular/router": "~8.0.0",
     "@angular/service-worker": "~8.0.0",
     "@auth0/angular-jwt": "^4.0.0",
+    "@types/node": "~8.9.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "web-push": "^3.4.3",
+    "web-push": "^3.2.5",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.1",
+    "@angular/cli": "~8.0.0",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
     "@types/jasmine": "~3.3.8",
