--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/service-worker": "~8.0.0",
     "@auth0/angular-jwt": "^4.0.0",
     "@types/node": "~8.9.4",
+    "@types/webpack-env": "^1.15.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "web-push": "^3.2.5",
