--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@auth0/angular-jwt": "^4.0.0",
     "@types/node": "~8.9.4",
     "@types/webpack-env": "^1.15.2",
+    "http-server": "^0.12.3",
     "process": "^0.11.10",
     "rxjs": "~6.4.0",
+    "simple-web-notification": "^2.0.1",
     "stream": "0.0.2",
     "tslib": "^1.9.0",
     "web-push": "^3.2.5",
